<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fishbot_cartographer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="358181022@qq.com">orangepi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>cartographer</depend>
  <depend>cartographer_ros_msgs</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libabsl-dev</depend>
  <depend>libgflags-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
